# src/main/scala/org/red/cerberus/http/Requests.scala
@@ -1,14 +1,18 @@
 package org.red.cerberus.http
 
 
-case class LegacySignupReq(key_id: Long,
-                           verification_code: String,
+case class LegacySignupReq(keyId: Long,
+                           verificationCode: String,
                            name: String,
                            email: String,
                            password: String)
 
+case class SSOLoginReq(authCode: String)
+
+case class PasswordLoginReq(login: String, password: String)
+
 case class passwordResetRequestReq(email: String)
 
-case class passwordChangeReq(new_password: String)
+case class passwordChangeReq(newPassword: String)
 
-case class passwordChangeWithTokenReq(email: String, token: String, new_password: String)
+case class passwordChangeWithTokenReq(email: String, token: String, newPassword: String)
